# Integer-Optimal-Control-with-TV-Discretization

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  RELEASING.md  bvp_blur.py  environment.yml  exact_solution2.py  go4it.py  mip_subproblem.py  opt_blur.py  opt_tv_base.py  pyproject.toml  reproduce.sh  requirements.txt  rt0_dual_solver.py  run_experiment.py  sub_problem_cb.py  sub_problem_solver_1_cb.py  sub_problem_solver_2.py  synthetic_problem.py  trust_region_cb.py  trust_region_solver.py  trust_region_subproblem.py  tv_coarse_handler.py  tv_handler.py  utility.py
.github/workflows/: ci.yml
tests/: test_exact_solution.py  test_sub_problem_solver_2.py
