[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tv-pde-inverse-problem"
version = "0.1.0"
description = "PDE-constrained binary control optimization with TV regularization"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "numpy>=1.26.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "sympy>=1.12",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py310"]
